--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,23 +1,25 @@
 
 <section class="singup-page">
 
+    <section class="image-form">
+        <img src="/images/dollars2.jpg" alt="form image">
+    </section>
     <section class="singup">
 
 
         <div class="singupContainer">
-            <form action="/singup" method="POST">
+            <form action="/login" method="POST">
 
             <label for="username">User Name</label>
             <input class="form" type="text" name="username" required>
-            <label for="email">Email</label>
-            <input class="form"type="email" name="email" required>
+            
             <label for="password">Password</label>
             <input class="form"type="password" name="password" required>
 
-            <button type="submit"> Sing Up</button>
+            <button type="submit"> Log in</button>
             </form>
 
-            <p class="registered">Already registered? <a href="/login">Log in!</a></p>
+            <p class="registered">Dont have an account yet? <a href="/singup">Register here!</a></p>
         </div>
 
 
@@ -27,9 +29,6 @@
     </section>
 
     
-    <section class="image-form">
-        <img src="/images/back.jpg" alt="form image">
-    </section>
     
 
 </section>
