--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <section id="intro">
     <div id="logo-container">
-        <img src="/images/output-onlinepngtools (5).png" alt="logo" id="logo-img">
+        <img src="/images/output-onlinepngtools (5).png" alt="logo" class="logo-img">
         <h1>CRYPTOCOIN</h1>
     </div>
     <div id="info-container">
@@ -20,4 +20,3 @@
 </section>
 
 
-</section>
