--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
    <body>
 
               {{{body}}}
-
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
       <script src="/js/script.js"></script>
    </body>
 
