--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -217,6 +217,7 @@ header{
     align-items: center;
     color: rgb(34, 177, 76);
     font-family: arial;
+    margin-left: 140px;
    }
 
    nav{
@@ -467,7 +468,4 @@ header{
        
      }
 
-
-  
-  
   
