--- a/views/page/transactions.hbs
+++ b/views/page/transactions.hbs
@@ -8,9 +8,9 @@
 </header>
 <main>
     <nav>
-        <a href="/home" class="nav-link"> <img src="/images/home.png" class="nav-icon"></a>
+        <a href="/home" class="nav-link"> <img src="/images/home-out.png" class="nav-icon"></a>
         <a href="/transactions" class="nav-link"> <img src="/images/bank.png" class="nav-icon"></a>
-        <a href="/charts"class="nav-link"> <img src="/images/charts.png" class="nav-icon"></a>
+        <a href="/charts"class="nav-link"> <img src="/images/charts-out.png" class="nav-icon"></a>
     </nav>
 
     <section id="transaction-container">
