--- a/views/page/transactions.hbs
+++ b/views/page/transactions.hbs
@@ -4,7 +4,7 @@
         <h1>CRYPTOCOIN</h1>
     </div>
 
-    <a href="/logout"> Log out</a>
+    <a href="/logout" id="login-btn"> Log out</a>
 </header>
 <main>
     <nav>
