--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
         </div>
         <div id="img-container">
             <img src="/images/laptop.png" alt="laptop mockup" id="laptop">
-            <img src="/images/mercados.png" alt="mercados" id="mercados">
+            <img src="/images/chart.png" alt="mercados" id="mercados">
         </div>
     </div>
 </section>
