fix: cleaned some comments

--- a/views/page/charts.hbs
+++ b/views/page/charts.hbs
@@ -33,10 +33,11 @@
         </div>
 
 
-       
+    
 
-        <script>
-
+        <script> 
+            //<---------------------------DEFINING CHART PARAMETERS IN THIS SCRIPT------------------------->
+            
                 var ctx = document.getElementById('myChart');
 
                 var averages = [];
